--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,10 @@
     </header>
 
     <main id="content" class="main-content" role="main">
+      <div class="linkbar">
+	<a class="sitelinks" href="index.html">Home</a> 
+	<a class="sitelinks" href="cmdline_course.html">Command-Line Course</a> 
+      </div>
       {{ content }}
 
       <footer class="site-footer">
