--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -204,6 +204,15 @@ a {
     text-align: justify;
    }
 
+  div.linkbar {
+    padding-bottom: 0px;
+  }
+
+  a.sitelinks {
+    padding-right: 10px;
+    font-size:20px;
+  }
+
   code {
     padding: 2px 4px;
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
