--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">Mouse Mousekewitz</h1>
+      <h1 class="project-name">{{site.title}}</h1>
     </header>
 
     <main id="content" class="main-content" role="main">
